enh: version endpoint
